deployment-service1-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment-canary
  labels:
    app: service1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service1
      version: canary
  template:
    metadata:
      labels:
        app: service1
        version: canary
    spec:
      containers:
        - name: service1
          imagePullPolicy: Never
          image: microservice1:canary
          ports:
            - containerPort: 5001
