deployment-service1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment
  labels:
    app: service1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1
          imagePullPolicy: Never
          image: microservice1:1.0.0
          ports:
            - containerPort: 5001
