deployment-service2-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment-canary
  labels:
    app: service2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service2
      version: canary
  template:
    metadata:
      labels:
        app: service2
        version: canary
    spec:
      containers:
        - name: service2
          imagePullPolicy: Never
          image: microservice2:canary
          ports:
            - containerPort: 5002
