deployment-service2-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment-stable
  labels:
    app: service2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service2
      version: v1
  template:
    metadata:
      labels:
        app: service2
        version: v1
    spec:
      containers:
        - name: service2
          imagePullPolicy: Never
          image: microservice2:stable
          ports:
            - containerPort: 5002
