service-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1-service
spec:
  type: NodePort
  selector:
    app: service1
  ports:
    - port: 5001
      targetPort: 5001
