service-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2-service
spec:
  type: NodePort
  selector:
    app: service2
  ports:
    - port: 5002
      targetPort: 5002
