deployment-service2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment-v1
  labels:
    app: service2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service2
      version: v1
  template:
    metadata:
      labels:
        app: service2
        version: v1
    spec:
      containers:
        - name: service2
          imagePullPolicy: Never
          image: microservice2:1.0.0
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  type: LoadBalancer
  selector:
    app: service2
  ports:
    - port: 5002
      targetPort: 5002
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: service2-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`service2.local`)
      kind: Rule
      services:
        - name: service2
          port: 5002
