deployment-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik-dashboard`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
